Fix squashed-image bug in the art portfolio.

--- a/www/public/art/_index.scss
+++ b/www/public/art/_index.scss
@@ -89,5 +89,6 @@ body {
   @media screen and (max-width: em(500px, $base-font-size)) {
     border: 0;
     box-shadow: none;
+    height: auto;
     margin: 0;
     max-width: 100%; } }
